feat: Amélioration du conteneur principal avec un défilement personnalisé et des styles de barre de défilement

--- a/web/front/index.html
+++ b/web/front/index.html
@@ -19,7 +19,10 @@
       </div>
     </header>
 
-    <main id="matrixContainer" class="matrix-grid w-full max-w-7xl flex-1 overflow-y-auto"></main>
+    <main id="matrixContainer"
+      class="matrix-grid w-full max-w-7xl flex-1 overflow-y-auto overflow-x-hidden scrollbar-thin">
+    </main>
+
 
     <script src="script.js"></script>
   </body>
