feat: Ajout d'une fonctionnalité de redémarrage du moteur audio via l'API et mise à jour de l'interface utilisateur

--- a/web/front/index.html
+++ b/web/front/index.html
@@ -12,6 +12,9 @@
     <header class="w-full max-w-7xl mb-4 flex justify-between items-center">
       <h1 class="text-xl sm:text-2xl font-bold text-blue-400">🎛️ VBMatrix Tool</h1>
       <div class="flex gap-2 items-center">
+        <button id="restartBtn" class="bg-yellow-600 hover:bg-yellow-700 px-3 py-1 rounded text-sm sm:text-base">
+          ♻️ Restart Audio
+        </button>
         <button id="refreshBtn" class="bg-blue-600 hover:bg-blue-700 px-3 py-1 rounded text-sm sm:text-base">
           🔁 Refresh
         </button>
@@ -20,7 +23,7 @@
     </header>
 
     <main id="matrixContainer"
-      class="matrix-grid w-full max-w-7xl flex-1 overflow-y-auto overflow-x-hidden scrollbar-thin">
+      class="matrix-grid w-full flex-1 overflow-y-auto overflow-x-hidden scrollbar-thin">
     </main>
 
 
